[package]
name = "yaml_restructure_dots"
version = "0.1.0"
edition = "2021"
authors = ["Liz Henry <liz.henry@ouvaton.org>"]
readme = "README.md"
repository = "https://github.com/lise-henry/yaml_restructure_dots"
license = "MPL-2.0"
keywords = ["yaml"]

[dependencies]
serde_yaml = "0.9"
thiserror = "1.0"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]