[package]
name = "yaml_extras"
version = "0.1.0"
description = "Misc yaml-related utility functions"
edition = "2021"
authors = ["Liz Henry <liz.henry@ouvaton.org>"]
readme = "README.md"
repository = "https://github.com/lise-henry/yaml_restructure_dots"
license = "MPL-2.0"
keywords = ["yaml"]

[dependencies]
serde_yaml = "0.9"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]